@@ -7,6 +7,8 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
+revision 105:
+- added gdb-clean and gdb-dirclean targets
 revision 104:
 - reverted .phony targets (toolchain)
 - fixes gdb build
